@@ -28,6 +28,7 @@ OpenLDAP 2.4.20 Engineering
 	Fixed slapo-pcache entry dupe (ITS#6310)
 	Fixed slapo-syncprov checkpoint conversion (ITS#6370)
 	Fixed slapo-syncprov deadlock (ITS#6335)
+	Fixed slapo-syncprov memory leak (ITS#6376)
 	Fixed slapo-syncprov out of order changes (ITS#6346)
 	Build Environment
 		Fixed memrchr define (ITS#6351)
